# asto

./: .gitignore  README.md
di/apps/asto_back/: do.sh  include.conf
di/apps/asto_front/: do.sh  include.conf
src/rust/: Cargo.toml
src/rust/asto_back/: .env  Cargo.toml  include.conf  sax2.sh  sax3.sh  settings.toml
src/rust/asto_back/src/: main.rs
src/rust/asto_back/src/common/: mod.rs
src/rust/asto_back/src/css/: .gitingore  index.css  portrait.css  portrait.scss  style.css  style.scss
src/rust/asto_back/src/pasitos/: data.rs  db.rs  mod.rs  sax.rs  sax2.rs  sax3.rs
src/rust/asto_back/src/pasitos/spreadsheet/: mod.rs
src/rust/asto_back/src/pasitos/spreadsheet/sax3/: mod.rs  utils.rs
src/rust/asto_back/src/server/: mod.rs
src/rust/asto_back/src/server/beta/: mod.rs
src/rust/asto_back/src/server/common/: error.rs  health.rs  macros.rs  mod.rs
src/rust/asto_back/src/server/ws/: mod.rs
src/rust/asto_back/src/server/ws/common/: macros.rs  mod.rs
src/rust/asto_back/xml/: copy.xsl
src/rust/asto_back/xml/2022-10-09/: smm.xml  svd.xml
src/rust/asto_back/xml/2022-11-06/: .gitignore  smm.xml  svd.xml
src/rust/asto_back/xml/2022-12-04/: do.sh  smm.xml  svd.xml
src/rust/asto_back/xml/2022-12-25/: .gitignore  do.sh  s6.xml
src/rust/asto_back/xml/2023-01-29/: .gitignore  do.sh  s6.xml  smm.xml  svd.xml
src/rust/asto_back/xml/2023-02-19/: do.sh  s6.xml  smm.xml  svd.xml
src/rust/asto_back/xml/2023-03-19/: .gitignore  do.sh  s6.xml  s6_orig.xml
src/rust/asto_back/xml/2023-04-16/: README.md  do.sh  s6_edited.xml  smm.xml  svd.xml
src/rust/asto_back/xml/2023-04-23/: .gitignore  README.md  do.sh  smm.xml  svd.xml
src/rust/asto_back/xml/2023-05-13/: .gitignore  README.md  do.sh  s6.xml  s6_edited.xml  some
src/rust/asto_common/: Cargo.toml
src/rust/asto_common/src/: lib.rs  route.rs
src/rust/asto_db/: .env  .gitignore  Cargo.toml
src/rust/asto_db/.sqlx/: query-296e9e5f5a747834f436a42425a43e9b12c5684cb53b3488ebf89e24543e49a2.json  query-29e9672fa8604cc435b0dce728498270ddd47d255cdbaa9f9e8a73d23a877912.json  query-5c1557b2719c26ffb3e1c8664714f06b22a34c974f9052951f2ae6a2d842023f.json  query-7f9668a3cff5076f9442a866c5895a3e7ce857971d2f10d794bd6583cf5b41ef.json  query-8204ab2fb844d278b0c8d86d4de45804a9bad91016b9acfca4dfadb1e4ec288e.json  query-86c5ff7f69fc6afc9a37adbc0e92f4e4e056f160c574ba88bb9c23dacf05b14b.json  query-9501c51ba5aeec817c30ae81fdca28337555b572f86b4c9ee071ea65ef9aca6d.json  query-c87d195f014796c9470459a68db79c2dd4a3f5c53c64e0c7bb9f8db8ebe2482b.json  query-cc074b9b57280562aa3739441cde85fbbd591457eb2fc4e2b3cfd5b2ec910934.json  query-d6cc02b4b86d91f94af477ec5ed4c7e1c23e0d8d1481038cae0827e4b74c21bf.json  query-e0b715a8cf37e1da83046a14ffc52294d592efab7dc3a6dc3bf19003b988cd77.json
src/rust/asto_db/mdb/: .gitignore  asto.mdb.sql  asto.sql
src/rust/asto_db/sh/: get_init_data.sh  psql-f.sh  psql.sh  reinit.sh
src/rust/asto_db/sql/: a100.sql  add_event_result.sql  event_resultlar.sql  event_resultlar_fix.sql  eventlar.sql  export_as_ftsarr.sql  export_dancerlar_for_anton.sql  get_init_data.sql
src/rust/asto_db/src/: lib.rs
src/rust/asto_front/: .env  .gitignore  Cargo.toml  README.md  build-for-localhost.sh  include.conf  include_apply.sh  nginx_prepare.sh
src/rust/asto_front/nginx/conf.d/: gzip.conf  log_format.conf  types.conf
src/rust/asto_front/nginx/sites-available/: local.asto.dance
src/rust/asto_front/nginx/sites-enabled/: local.asto.dance
src/rust/asto_front/src/: common.rs  lib.rs  to_pauan.rs
src/rust/asto_front/src/css/: .gitignore  admin.scss  landscape.scss  portrait.scss  print.scss  style.scss
src/rust/asto_front/src/css/assets/: convert.sh
src/rust/asto_front/src/html/: guest.html  user.html
src/rust/asto_front/src/js/: loader.js
src/rust/asto_front/src/render/: mod.rs
src/rust/asto_front/src/render/guest_content/: club_hash_filter.rs  dancer_hash_filter.rs  header.rs  judge_hash_filter.rs  main_filter.rs  mod.rs  trainer_hash_filter.rs
src/rust/asto_front/src/render/guest_content/content/: mod.rs
src/rust/asto_front/src/render/guest_content/content/filtered_clublar_table/: mod.rs
src/rust/asto_front/src/render/guest_content/content/filtered_dancerlar_table/: mod.rs  sub_table.rs
src/rust/asto_front/src/render/guest_content/content/filtered_judgelar_table/: mod.rs
src/rust/asto_front/src/render/guest_content/content/filtered_trainerlar_table/: mod.rs
src/rust/asto_front/src/render/guest_content/content/fixed/: found_clublar.rs  found_dancerlar.rs  found_judgelar.rs  found_trainerlar.rs  mod.rs  sort_clublar.rs  sort_dancerlar.rs  sort_judgelar.rs  sort_trainerlar.rs  suggest.rs
src/rust/asto_front/src/render/guest_content/content/fixed/filter/: input.rs  mod.rs
src/rust/asto_front/src/render/guest_content/content/fixed/filter/not_found_button/: button.rs  mod.rs  not_found.rs
src/rust/asto_front/src/render/guest_content/content/fixed/h3/: a.rs  caption.rs  mod.rs
src/rust/common_macros2/: Cargo.toml
src/rust/common_macros2/src/: lib.rs
src/rust/login_export/: Cargo.toml
src/rust/login_export/src/: lib.rs
src/rust/op_mode/: Cargo.toml
src/rust/pool_db/: Cargo.toml
src/rust/pool_db/src/: lib.rs
src/rust/spreadsheets/: Cargo.toml
src/rust/web_sys_utils/src/: lib.rs
